--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ header {
 	height: 90px;
 	width: 100%;
 	margin-top: 0;
-	/*margin-top: 70px;*/
+	
 }
 h1 {
 	font-size: 20pt;
@@ -109,13 +109,16 @@ h1 {
 h1, h3 {
 	margin-left: 150px;
 }
+h3 {
+	color: #2BB673;
+}
 nav {
 	margin-right: 150px;
 }
 .gallery {
-	clear: both;
+	/*clear: both;*/
 	/*margin-top: 100px;*/
-	padding-top: 100px;
+	padding-top: 70px;
 	text-align: center;
 	background-image: none;
 }
@@ -134,3 +137,34 @@ body {
 	width: 100%;
 	height: 100%;
 }
+.legenda img {
+	width: 23px;
+	height: 23px;
+	/*text-align: center;
+	margin-bottom: 70px*/
+}
+.legenda {
+	float: right;
+	height: 200px;
+	margin-right: 100px;
+	/*text-align: center;
+	position: auto;
+	margin: auto;*/
+	/*width: 580px;*/
+}
+td {
+	font-family: 'Oswald', sans-serif;
+	font-weight: 300;
+	padding-bottom: 10px;
+	line-height: 25px;
+	text-align: left;
+
+}
+tr {
+	line-height: 25px;
+
+	/*text-align: center;*/
+	/*padding-bottom: 8px;*/
+	/*margin-bottom: 10px;*/
+}
+
