--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
+/*html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
@@ -22,9 +22,9 @@ time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
-}
+}*/
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+/*article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
@@ -45,30 +45,52 @@ q:before, q:after {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
-}
+}*/
+
+/* END RESET */
+
+/*
+ * BASE
+ */
 
 html {
 	width: 100%;
 	height: 100%;
 }
+
 body {
-	/*margin-right: 150px;
-	margin-left: 150px;*/
 	background-color: #F1F1F2;
 	margin-top: 0;
 	padding-top: 0;
 	height: 100%;
 }
+
 header {
-	background-color: #ffffff;
+	background-color: #fff;
 	height: 90px;
 	width: 100%;
 	margin-top: 0;
 	
 }
+
 h1 {
 	font-size: 20pt;
+	font-family: 'PT Serif Caption', serif;
+	margin-top: 60px;
 }
+
+h1, h3 {
+	margin-left: 150px;
+}
+
+h3 {
+	color: #2BB673;
+}
+
+nav {
+	margin-right: 150px;
+}
+
 nav ul li {
 	text-decoration: none;
 	display: inline;
@@ -77,6 +99,7 @@ nav ul li {
 	/*margin-top: 60px;*/
 
 }
+
 nav ul li a {
 	text-decoration: none;
 	color: #6D6E71;
@@ -86,13 +109,16 @@ nav ul li a {
 	font-size: 12pt;
 
 }
+
 nav ul li a:hover {
 	color: #2BB673;
 
 }
+
 nav ul li a:visited {
 	color: #594A42;
 }
+
 img {
 	width: 140px;
 	height: 140px;
@@ -102,19 +128,12 @@ img {
 	
 
 }
-h1 {
-	font-family: 'PT Serif Caption', serif;
-	margin-top: 60px;
-}
-h1, h3 {
-	margin-left: 150px;
-}
-h3 {
-	color: #2BB673;
-}
-nav {
-	margin-right: 150px;
-}
+
+/*
+ * LAYOUT
+ */
+
+
 .gallery {
 	/*clear: both;*/
 	/*margin-top: 100px;*/
@@ -133,10 +152,7 @@ nav {
 	/*width: 220px;
 	height: 220px;*/
 }
-body {
-	width: 100%;
-	height: 100%;
-}
+
 .legenda img {
 	width: 23px;
 	height: 23px;
